# ompl-thin-python

./: .clang-format  .flake8  .gitignore  .gitmodules  CMakeLists.txt  README.md  action.sh  format.sh  main.cpp  setup.py  wrapper.cpp
.github/workflows/: release.yml  test.yaml
example/: constrained.cpp  lightning.py  many_algorithms.py  rrt_connect.py
python/ompl/: .gitignore  __init__.py
release/: Dockerfile  python_versions.txt
src/: demo.cpp  higher.hpp  ompl_higher.hpp  repair_planner.cpp  repair_planner.hpp  wrapper.cpp
tests/: common.py  test_constrained_planner.py  test_heuristic_planner.py  test_lightning.py  test_planner.py  test_repair_planner.py
